--- a/sources/Device/Device.uvprojx
+++ b/sources/Device/Device.uvprojx
@@ -1390,21 +1390,6 @@
           <GroupName>Display/Font</GroupName>
           <Files>
             <File>
-              <FileName>font5.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\font5.inc</FilePath>
-            </File>
-            <File>
-              <FileName>fontGOST28.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\fontGOST28.inc</FilePath>
-            </File>
-            <File>
-              <FileName>fontGOST72bold.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\fontGOST72bold.inc</FilePath>
-            </File>
-            <File>
               <FileName>fontUGO.inc</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\fontUGO.inc</FilePath>
@@ -1423,6 +1408,16 @@
               <FileName>Font.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\Font.h</FilePath>
+            </File>
+            <File>
+              <FileName>Font5.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font5.h</FilePath>
+            </File>
+            <File>
+              <FileName>Font8.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font8.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -3772,21 +3767,6 @@
           <GroupName>Display/Font</GroupName>
           <Files>
             <File>
-              <FileName>font5.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\font5.inc</FilePath>
-            </File>
-            <File>
-              <FileName>fontGOST28.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\fontGOST28.inc</FilePath>
-            </File>
-            <File>
-              <FileName>fontGOST72bold.inc</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\fontGOST72bold.inc</FilePath>
-            </File>
-            <File>
               <FileName>fontUGO.inc</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\fontUGO.inc</FilePath>
@@ -3805,6 +3785,16 @@
               <FileName>Font.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\Font.h</FilePath>
+            </File>
+            <File>
+              <FileName>Font5.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font5.h</FilePath>
+            </File>
+            <File>
+              <FileName>Font8.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font8.h</FilePath>
             </File>
           </Files>
         </Group>
