--- a/sources/DLoader/DLoader.uvprojx
+++ b/sources/DLoader/DLoader.uvprojx
@@ -859,6 +859,16 @@
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\Font.h</FilePath>
             </File>
+            <File>
+              <FileName>Font8.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font8.h</FilePath>
+            </File>
+            <File>
+              <FileName>Font5.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\Font5.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
