--- a/sources/fonts/MatrixFont/bin/settings.ini
+++ b/sources/fonts/MatrixFont/bin/settings.ini
@@ -15,7 +15,7 @@ CodeFontSize=17
 [Last Opened Files]
 File_0=D:\Projects\S8-57M\sources\fonts\Font8.RHF
 File_1=D:\Projects\S8-57M\sources\fonts\Font5.RHF
-File_2=
+File_2=D:\Projects\S8-57M\sources\fonts\FontUGO.RHF
 File_3=
 File_4=
 File_5=
