--- a/sources/Panel/Panel.uvprojx
+++ b/sources/Panel/Panel.uvprojx
@@ -1381,11 +1381,6 @@
               <FilePath>..\common\Display\Font\Symbols.h</FilePath>
             </File>
             <File>
-              <FileName>FontUGO2.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\FontUGO2.h</FilePath>
-            </File>
-            <File>
               <FileName>FontUGO.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\FontUGO.h</FilePath>
@@ -1399,6 +1394,11 @@
               <FileName>FontNormal.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\FontNormal.h</FilePath>
+            </File>
+            <File>
+              <FileName>FontDIAG.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\FontDIAG.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2849,11 +2849,6 @@
               <FilePath>..\common\Display\Font\Symbols.h</FilePath>
             </File>
             <File>
-              <FileName>FontUGO2.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\FontUGO2.h</FilePath>
-            </File>
-            <File>
               <FileName>FontUGO.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\FontUGO.h</FilePath>
@@ -2867,6 +2862,11 @@
               <FileName>FontNormal.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\FontNormal.h</FilePath>
+            </File>
+            <File>
+              <FileName>FontDIAG.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\common\Display\Font\FontDIAG.h</FilePath>
             </File>
           </Files>
         </Group>
