--- a/sources/fonts/MatrixFont/bin/settings.ini
+++ b/sources/fonts/MatrixFont/bin/settings.ini
@@ -13,9 +13,9 @@ Preview=0
 CodeFontSize=17
 
 [Last Opened Files]
-File_0=D:\Projects\S8-57M\sources\fonts\FontUGO.RHF
-File_1=D:\Projects\S8-57M\sources\fonts\Font64.RHF
-File_2=D:\Projects\S8-57M\sources\fonts\FontUGO2.RHF
+File_0=D:\Projects\S8-57M\sources\fonts\FontDIAG.RHF
+File_1=D:\Projects\S8-57M\sources\fonts\FontUGO.RHF
+File_2=D:\Projects\S8-57M\sources\fonts\Font64.RHF
 File_3=
 File_4=
 File_5=
