--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ sources/Panel/Objects/
 sources/Panel/Listings-Debug/
 sources/Panel/Objects-Debug/
 sources/Panel/DebugConfig/
+sources/CDC_Standalone/MDK-ARM/STM324x9I-EVAL_USBD-HS-IN-FS/
