--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ sources/Panel/Objects/
 sources/Panel/Listings-Debug/
 sources/Panel/Objects-Debug/
 sources/Panel/DebugConfig/
+
+sources/CDC_Standalone/
