--- a/sources/DLoader/DLoader.uvprojx
+++ b/sources/DLoader/DLoader.uvprojx
@@ -336,7 +336,7 @@
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls></MiscControls>
+              <MiscControls>-Wno-padded -Wno-missing-variable-declarations -Wno-extra-semi-stmt -Wno-implicit-int-conversion -Wno-unused-parameter -Wno-missing-noreturn -Wno-bad-function-cast -Wno-switch-enum -Wno-covered-switch-default -Wno-sign-conversion -Wno-cast-align -Wno-old-style-cast  -Wno-c++98-compat-pedantic</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F437xx,LOADER</Define>
               <Undefine></Undefine>
               <IncludePath>..\common\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\common\libs\STM32Cube_F4\Middlewares\Third_Party\FatFs\src;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;.\src\Hardware\FatFS;.\src\Hardware\HAL;.\src\Hardware\USBH;.\src;..\</IncludePath>
